2008-07-24  Thijs Vermeir  <thijsvermeir@gmail.com>

	* libs/gst/base/gstbasesrc.h:
	revert the changes to the header file for the ABI.

2008-07-24  Thijs Vermeir  <thijsvermeir@gmail.com>

	* libs/gst/base/gstbasesrc.c:
	* libs/gst/base/gstbasesrc.h:
	Don't cache the seekable status.
	Fixes bug #544174

2008-07-24  Rene Stadler  <mail@renestadler.de>

	* docs/manual/advanced-autoplugging.xml: Add fakesink to example
	code to close the pipeline graph.  This prevents the program from
	printing internal data flow errors.

2008-07-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* docs/manual/basics-bus.xml:
	Correct typo. Fixes bug #544320.

2008-07-22  Michael Smith <msmith@songbirdnest.com>

	* configure.ac:
	  Remove AC_ISC_POSIX macro; it's broken on some platforms and not needed.
	  Add check (taken from -base) for winsock, adds WIN32_LIBS
	* gst/Makefile.am:
	  Add WIN32_LIBS to LIBADD for libgstreamer. Needed now that gstpoll uses
	  winsock.
	  Define GST_EXPORTS when building libgstreamer (only used on win32)
	* gst/gst_private.h:
	* gst/gstinfo.h:
	  Use GST_EXPORT instead of locally-defined (and incorrect IMPORT_SYMBOL)
	  for symbols that we need to export in both these files.
	* gst/gstpoll.c:
	  Include gst_private.h higher up to avoid some compile problems on win32.

2008-07-22  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstvalue.c:
	Fix typos.

2008-07-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstcaps.c:
	Previous commit was wrong NULL caps does not exist
	and indicate an error, so also add a FIXME to
	gst_caps_is_equal where NULL caps are accepted.

2008-07-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstcaps.c:
	Allow passing of NULL to gst_caps_union

2008-07-21  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstghostpad.c:
	Add in doc that gst_ghost_pad_set_target can accept
	NULL to clear target

2008-07-15  Michael Smith <msmith@songbirdnest.com>

	* gst/gstplugin.c:
	* gst/gstregistry.c: