@@ -1,5 +1,10 @@
 2008-07-24  Thijs Vermeir  <thijsvermeir@gmail.com>
 
+	* gst/gstmessage.c:
+	Fix confusing documentation.
+
+2008-07-24  Thijs Vermeir  <thijsvermeir@gmail.com>
+
 	* libs/gst/base/gstbasesrc.h:
 	revert the changes to the header file for the ABI.
 
